--- a/aplicacion/module/Application/view/application/aplicacion/jsontoxml.phtml
+++ b/aplicacion/module/Application/view/application/aplicacion/jsontoxml.phtml
@@ -2,38 +2,50 @@
 <?php
 //print_r($this->xml);
 //exit;
-
 //foreach ($this->xml as $item) {
 //    print_r($item->id);
 //    echo "<br><br>";
 //}
 ?>
 
-<table class="table">
-    <tr>
-        <th>ID</th>
-        <th>Nombre</th>
-        <th>Email</th>
-        <th>Posicion</th>
-        <th>Salario</th>
-        <th>Detalle</th>
-    </tr>
-    <?php
-    //print_r($usuarios);
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        <h3 class="panel-title">Salario entre <?php echo $this->min ?> y <?php echo $this->max ?></h3>
+    </div>
+    <div class="table-responsive">
+        <table class="table table-hover" id="dev-table">
+            <tbody>
+                <tr>
+                    <?php if (empty($this->xml)) { ?>
+                        <th><?php echo "No se encontraron resultados."; ?></th>
+                    <?php } else { ?>
+                        <th>ID</th>
+                        <th>Nombre</th>
+                        <th>Email</th>
+                        <th>Posicion</th>
+                        <th>Salario</th>
+                        <th>Detalle</th> 
+                    <?php } ?>           
+                </tr>
+                <?php
+                //print_r($usuarios);
 
-    foreach ($this->xml as $item) {
-        ?>
-        <tr>
-            <td><?php echo $item->id ?></td>
-            <td><?php echo $item->name ?></td>
-            <td><?php echo $item->email ?></td>
-            <td><?php echo $item->position ?></td>
-            <td><?php echo $item->salary ?></td>
-            <td><a href="/aplicacion/public/detalle/<?php echo $item->id; ?>" title="Ver detalle" >
-                    Detalle
-                </a>
-            </td>
-        </tr>
-    <?php } ?>
+                foreach ($this->xml as $item) {
+                    ?>
+                    <tr>
+                        <td><?php echo $item->id ?></td>
+                        <td><?php echo $item->name ?></td>
+                        <td><?php echo $item->email ?></td>
+                        <td><?php echo $item->position ?></td>
+                        <td><?php echo $item->salary ?></td>
+                        <td><a href="<?php echo $this->url . '/detalle/' . $item->id; ?>" title="Ver detalle" >
+                                Detalle
+                            </a>
+                        </td>
+                    </tr>
+                <?php } ?>
 
-</table>
+            </tbody>
+        </table>
+    </div>
+</div>
