--- a/aplicacion/module/Application/view/application/aplicacion/detalle.phtml
+++ b/aplicacion/module/Application/view/application/aplicacion/detalle.phtml
@@ -4,7 +4,7 @@
 <div class="col-md-12">
     <div class="panel panel-primary">
         <div class="panel-heading">
-            <h3 class="panel-title">Información del Empleado</h3>
+            <h3 class="panel-title"><?php echo $this->titulo ?></h3>
         </div>
         <div class="table-responsive">
             <table class="table table-hover" id="dev-table">
