--- a/aplicacion/module/Application/view/layout/layout.phtml
+++ b/aplicacion/module/Application/view/layout/layout.phtml
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <?php echo $this->headTitle('ZF2 '. $this->translate('Aplicación'))->setSeparator(' - ')->setAutoEscape(false) ?>
+        <?php echo $this->headTitle('AGE '. $this->translate('Aplicación de Gestión de Empleados'))->setSeparator(' - ')->setAutoEscape(false) ?>
 
         <?php echo $this->headMeta()
             ->appendName('viewport', 'width=device-width, initial-scale=1.0')
@@ -34,7 +34,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="<?php echo $this->url('home') ?>"><img src="<?php echo $this->basePath('img/zf2-logo.png') ?>" alt="Zend Framework 2"/>&nbsp;<?php echo $this->translate('Aplicación') ?></a>
+                    <a class="navbar-brand" href="<?php echo $this->url('home') ?>">&nbsp;<?php echo $this->translate('Aplicación de Gestión de Empleados') ?></a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
@@ -47,7 +47,7 @@
             <?php echo $this->content; ?>
             <hr>
             <footer>
-                <p>&copy; <?php echo date('Y') ?> by Martin Tito Lavi <?php echo $this->translate('All rights reserved.') ?></p>
+                <p>&copy; <?php echo date('Y') ?> by Martin Tito Lavi </p>
             </footer>
         </div> <!-- /container -->
         <?php echo $this->inlineScript() ?>
